--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html {{ HTML_ATTRS }}>
+<html>
   <head>
-    {{ HEAD }}
   </head>
   <body {{ BODY_ATTRS }}>
+    <div id="app"></div>
     {{ APP }}
   </body>
 </html>
