--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <title>Document</title>
+    <title>DevPool</title>
 </head>
+
 <body>
     <div id="app">
         <p>{{ message }}</p>
-      </div>
+    </div>
 </body>
+
 </html>
